k8s/apps/shumoku/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shumoku
    app.kubernetes.io/name: shumoku
  name: shumoku
  namespace: netbox
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: shumoku
    app.kubernetes.io/name: shumoku
  type: ClusterIP
