k8s/apps/shumoku/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shumoku
  namespace: netbox
spec:
  hostnames:
    - shumoku.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: shumoku
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
